<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <ScrollView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mode_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_explanation"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="#666666" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_song_normal"
                android:id="@+id/song_normal_button"
                android:singleLine="false"
                android:textSize="32sp"
                android:layout_marginTop="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_song_repeat"
                android:id="@+id/song_repeat_button"
                android:singleLine="false"
                android:textSize="32sp"
                android:layout_marginTop="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_song_stop"
                android:id="@+id/song_stop_button"
                android:singleLine="false"
                android:textSize="32sp"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/label_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_song"
                android:textSize="24sp" />

            <NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp" />

            <Button
                android:id="@+id/song_assign_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:singleLine="false"
                android:text="@string/button_song_assign"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_result_id"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_result_name"
                android:textSize="28sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
